--- a/style.css
+++ b/style.css
@@ -25,19 +25,24 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
+h2 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
+p {
+  text-align: left;
+  font-size: 25px;
+  white-space: pre-line;
+}
+
 #app {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   padding: 2rem;
   text-align: center;
 }
