--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+br {
+  display: block;
+  margin: 10px 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -31,6 +36,12 @@ body {
 
 h2 {
   font-size: 3.2em;
+  line-height: 1.1;
+  margin: 0;
+}
+
+h3 {
+  font-size: 2em;
   line-height: 1.1;
   margin: 0;
 }
