--- a/style.css
+++ b/style.css
@@ -18,6 +18,20 @@ br {
   margin: 10px 0;
 }
 
+.selectionRow {
+		display: flex;
+		flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+}
+
+.selectionColumn {
+  display: flex;
+  gap: 5em;
+  padding: 1em
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -47,8 +61,15 @@ h3 {
   margin: 0;
 }
 
+h4 {
+  font-size: 1.25em;
+  font-weight: 400;
+  line-height: 1.1;
+  margin: 0;
+}
+
 p {
-  text-align: left;
+  text-align: center;
   font-size: 25px;
   white-space: pre-line;
 }
