Add stimulus mainloop partially

--- a/css/tester.css
+++ b/css/tester.css
@@ -14,6 +14,7 @@
     align-items: center;
     border-radius: 10px;
     border: 0.5em solid dimgrey;
+    background-color: #242424;
     margin: 1em;
     height: 10em;
     width: 30em;
