--- a/css/tester.css
+++ b/css/tester.css
@@ -49,9 +49,9 @@ button.startTestButton.clicked {
 }
 
 .timeElapsed{
-    transform: translateY(-23px);
-    font-size: 1.75em;
-    transform: translateX(-105px);
+    transform: translateY(-15px) translateX(-150px);
+    font-size: 1.5em;
 }
+    
 
 
