Add more code for stim mainloop

--- a/css/tester.css
+++ b/css/tester.css
@@ -26,7 +26,7 @@
     left: 0;
     right: 0;
     height: 25%;
-    background-color: rgba(107, 105, 105, 0.453);
+    background-color: rgb(56, 56, 56);
     animation: bottomDropIn 0.5s;
 }
 
